Satisfying spotless
Signed-off-by: Gaël L'hopital <gael@lhopital.org>